--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -18,6 +18,7 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: example
     volumes:
       - "./docker-entrypoint-initdb.d/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro"
+    command: mongod --quiet --logpath /dev/null
   mongo-express:
     image: mongo-express
     links:
@@ -28,3 +29,4 @@ services:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: example
       ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
+    command: mongod --quiet --logpath /dev/null
