--- a/api/package.json
+++ b/api/package.json
@@ -17,6 +17,8 @@
   "author": "Noemi",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.12",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.11"
