--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -1,14 +1,5 @@
 version: "3.5"
 services:
-  app:
-    build: .
-    links:
-      - mongo
-    ports:
-      - 8000:8000
-    volumes:
-      - .:/opt/app
-      - /opt/app/node_modules
   mongo:
     image: mongo
     ports:
@@ -18,7 +9,16 @@ services:
       MONGO_INITDB_ROOT_PASSWORD: example
     volumes:
       - "./docker-entrypoint-initdb.d/mongo-init.js:/docker-entrypoint-initdb.d/mongo-init.js:ro"
-    command: mongod --quiet --logpath /dev/null
+    #command: mongod --quiet --logpath /dev/null
+  app:
+    build: .
+    links:
+      - mongo
+    ports:
+      - 8000:8000
+    volumes:
+      - .:/opt/app
+      - /opt/app/node_modules
   mongo-express:
     image: mongo-express
     links:
@@ -29,4 +29,4 @@ services:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: example
       ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
-    command: mongod --quiet --logpath /dev/null
+    #command: mongod --quiet --logpath /dev/null
