--- a/api/package.json
+++ b/api/package.json
@@ -10,6 +10,16 @@
     "dev:debug": "nodemon --config nodemon.json",
     "start": "node ./dist/server.js"
   },
+  "jest": {
+    "preset": "ts-jest",
+    "testEnviroment": "node",
+    "collectCoverage": true,
+    "coveragePathIgnorePatterns": [
+      "/node_modules/",
+      "/test/",
+      "/dist/"
+    ]
+  },
   "keywords": [
     "api",
     "rest"
@@ -17,11 +27,19 @@
   "author": "Noemi",
   "license": "ISC",
   "dependencies": {
-    "@types/cors": "^2.8.12",
-    "cors": "^2.8.5",
+    "@types/express-fileupload": "^1.1.7",
+    "@types/jest": "^27.0.2",
+    "@types/jsonwebtoken": "^8.5.5",
+    "@types/sha1": "^1.1.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^6.0.11"
+    "express-fileupload": "^1.2.1",
+    "jest": "^27.2.5",
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^6.0.9",
+    "sha1": "^1.1.1",
+    "ts-jest": "^27.0.6",
+    "typescript": "^4.4.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.13"
