--- a/api/package.json
+++ b/api/package.json
@@ -27,10 +27,12 @@
   "author": "Noemi",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express-fileupload": "^1.1.7",
     "@types/jest": "^27.0.2",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/sha1": "^1.1.3",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-fileupload": "^1.2.1",
