--- a/api/docker-compose.yml
+++ b/api/docker-compose.yml
@@ -29,4 +29,4 @@ services:
       ME_CONFIG_MONGODB_ADMINUSERNAME: root
       ME_CONFIG_MONGODB_ADMINPASSWORD: example
       ME_CONFIG_MONGODB_URL: mongodb://root:example@mongo:27017/
-    command: mongod --quiet --logpath /dev/null
+    #command: mongod --quiet --logpath /dev/null
